# mondossierweb-parser

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mondossierweb/: __main__.py  main.py
