[tool.poetry]
name = "mondossierweb"
version = "0.1.2"
description = "Parses grades out of mondossierweb\u001b[1;5D\u001b[1;5D\u001b[1;5D"
authors = ["Ewen Le Bihan <hey@ewen.works>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
docopt = "^0.6.2"
bs4 = "^0.0.1"
helium = "^3.0.9"
lxml = "^4.9.2"

[tool.poetry.scripts]
mondossierweb = "mondossierweb.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
